tests/purs/passing/NotNamedMain.purs
module NotNamedMain where

import Prelude
import Effect (Effect)
import Effect.Console (log)

main :: Effect Unit
main = do
  log "Done"
